# ml-neural-network

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
labs/C2_W1_Lab01_Neurons_and_Layers/: C2_W1_Lab01_Neurons_and_Layers.html  tensor-flow-example.py
labs/C2_W1_Lab02_CoffeeRoasting_TF/: C2_W1_Lab01_Neurons_and_Layers.ipynb  C2_W1_Lab02_CoffeeRoasting_TF.html
labs/C2_W1_Lab03_CoffeeRoasting_Numpy/: C2_W1_Lab02_CoffeeRoasting_TF.ipynb
labs/C2_W2_Assignment/: C2_W2_Assignment.html  C2_W2_Assignment.ipynb
labs/C2_W2_SoftMax/: C2_W2_Multiclass_TF.html  C2_W2_Relu.ipynb  C2_W2_SoftMax.html
labs/C2_W3_Assignment/: C2_W3_Assignment.html  C2_W3_Assignment.ipynb
labs/C2_W3_Lab_01_Model_Evaluation_and_Selection/: C2W3_Lab_01_Model_Evaluation_and_Selection.html
labs/C2_W3_Lab_02_Diagnosing_Bias_and_Variance/: C2W3_Lab_02_Diagnosing_Bias_and_Variance.html
src/ml_neural_network/: __init__.py  hand_writting_recognition.py  hand_writting_recognition_1.py  lab1_practice.py  lab2_practice.py  lab3_practice.py  ml_neural_network.py  multiclass_classification_softmax.py
tests/: __init__.py  test_ml_neural_network.py
