[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_neural_network"
version = "0.1.0"
description = "Neural network lab"
readme = "README.rst"
authors = [
  {name = "Newton Sarker", email = "newton.sarker@gmail.com"}
]
maintainers = [
  {name = "Newton Sarker", email = "newton.sarker@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/newtonsarker/ml_neural_network/issues"
changelog = "https://github.com/newtonsarker/ml_neural_network/blob/master/changelog.md"
homepage = "https://github.com/newtonsarker/ml_neural_network"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

